Added edit function

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,38 +2,33 @@
 
 {%block content %}
         <section class="header">
-            <h1>Your Name</h1>
-            <p>Your current goal. (Job, freelance, etc)</p>
+            <h1>Mitch Reddoch</h1>
+            <p>Currently freelance writing and working on my own projects</p>
             <!--I would suggest choosing a different picture here.-->
             <!--Like maybe a hobby photo-->
-            <img src="https://cdn.pixabay.com/photo/2020/09/04/12/32/kayak-5543935_1280.jpg" alt="Headshot of myself">
+            <img src="https://photos.onedrive.com/share/8CB43F3E80874726!66256?cid=8CB43F3E80874726&resId=8CB43F3E80874726!66256&authkey=!AB96o7nRRvh8lHw&ithint=photo&e=l6u86I" alt="Headshot of myself">
         </section>
         <section id="about-page">
             <div id="triangle7"></div>
             <div id="triangle8"></div>
-            <h2>Section Title</h2>
-            <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
-            </p>
-            <p>
-                Soufflé cupcake cupcake. 
-                Brownie chocolate cake gingerbread candy carrot cake sesame snaps cookie cake. 
-                Bear claw pastry candy canes tart cookie caramels cotton candy caramels sweet roll. 
-                Bonbon tootsie roll gummi bears sugar plum pie croissant. 
-                Muffin sweet roll bonbon. 
-                Carrot cake gummies cheesecake. 
-                Gummi bears powder apple pie. 
-                Topping cake powder. 
-                Pastry chupa chups caramels.
-            </p>
-            <a href="#"><i class="far fa-file"></i>Resume</a>
+            <h2>Accomplished IT Technician, Programmer in the works. </h2>
+            <ul>
+                <li>
+                    <p>Offensive Security Network Penetration Testing Essentials <a href="https://www.credential.net/a63a65db-c94a-46df-8977-d8bc79e1f18d">Security Network Penetration Testing Badge</a>.</p>
+                </li>
+                <li>
+                    <p>Offensive Security Wireless Professional (Wireless Hacking) <a href="https://www.credential.net/98cb06c3-f7f5-4810-afdc-3a6d16091a5b">OSWP Certification</a></p>
+                </li>
+                <li>
+                    <p>Kali Linux Certified Professional <a href="https://www.credential.net/cfd5e509-dcf9-48b0-8ef3-f776fb7039e9">KLCP certification</a></p>
+                </li>
+                <li>
+                    <p>CompTIA A+<a href="https://www.credly.com/badges/097dec8f-2d19-45b2-83d0-872d4e31be1e/linked_in_profile">A+ Certification</a></p>
+                </li>
+                <li>
+                    <p>PCEP<a href="https://www.credly.com/badges/685609fe-e9b0-4616-8fbe-79b44eca4f1f?source=linked_in_profile">PCEP Certification</a></p>
+                </li>
+            </ul>
+          <a href="https://1drv.ms/w/s!AiZHh4A-P7SMg_sPABUaJoq6xWoEDw?e=1XUnCF"><i class="far fa-file"></i>Resume</a>
         </section>
  {% endblock %}
