Made the values look better on the website

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,10 +3,8 @@
 {%block content %}
         <section class="header">
             <h1>Mitch Reddoch</h1>
-            <p>Currently freelance writing and working on my own projects</p>
-            <!--I would suggest choosing a different picture here.-->
-            <!--Like maybe a hobby photo-->
-            <img src="https://photos.onedrive.com/share/8CB43F3E80874726!66256?cid=8CB43F3E80874726&resId=8CB43F3E80874726!66256&authkey=!AB96o7nRRvh8lHw&ithint=photo&e=l6u86I" alt="Headshot of myself">
+            <p>Currently freelance writing Python programs and working on my own projects</p>
+            <img src="https://www.digitalguardiannm.com/-_-/res/a50db78a-e197-46e3-bd8b-43c5f1f6766b/images/files/a50db78a-e197-46e3-bd8b-43c5f1f6766b/5d21964e-23a7-4045-bece-d29fe90d91b5/400-533/fa001704be840df89bfd1cbc353f39e8f96164e0" alt="Headshot of myself">
         </section>
         <section id="about-page">
             <div id="triangle7"></div>
