--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,38 +2,34 @@
 
 {%block content %}
         <section class="header">
-            <h1>{{ project_id.title }}</h1>
-            <p>{{ project_id.date }}</p>
-            <a href="{{ project_id.link }}" class="github-btn">
+            <h1>{{ project.title }}</h1>
+            <p>{{ project.date }}</p>
+            <a href="{{ project.url }}" class="github-btn">
                 <i class="fab fa-github"></i>
                 View on GitHub
             </a>
             <ul class="project-skills">
                 <div>
-                    <li>Catching exceptions</li>
-                    <li>Creating a loop</li>
-                    <li>Accepting user input</li>
-                    <li>Conditional statements</li>
+                {% for skill in skills %}
+                <li>{{ skill }}</li>
+                {% endfor %}
                 </div>
             </ul>
         </section>
         <section id="project-desc">
             <div id="triangle5"></div>
-            <h2>{{ project_id.description }}</h2>
+            <h2>Description</h2>
             <p>
-                Lemon drops muffin macaroon pastry sweet muffin soufflé. 
-                Chocolate cake sesame snaps gummi bears tiramisu toffee. 
-                Ice cream toffee marshmallow sugar plum croissant chupa chups powder. 
-                Cotton candy sweet caramels pastry candy.
+                {{ project.description }}
             </p>
             <div id="triangle6"></div>
         </section>
         <section id="edit-delete">
-            <a href="#">
+            <a href="{{ url_for('edit_project', id=project.id) }}">
                 <i class="fas fa-edit"></i>
                 Edit
             </a>
-            <a href="#">
+            <a href="{{ url_for('delete_project', id=project.id) }}">
                 <i class="far fa-trash-alt"></i>
                 Delete
             </a>
