--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,23 @@
 {%block content %}
         <section class="header">
             <h1>Python Developer</h1>
-            <p>I love coding because it taps deep into my creativity that no other skillset can reach.</p>
+            <p>I love coding because it stimulates my own creativity to build useful tools, and solve real world problems'.</p>
             <img src="https://www.digitalguardiannm.com/-_-/res/a50db78a-e197-46e3-bd8b-43c5f1f6766b/images/files/a50db78a-e197-46e3-bd8b-43c5f1f6766b/c05ce2d3-7b31-4fba-bcab-078efd2f9717/480-502/db462cc5bdaa8ca6841d46aa261b0f22eb1a6549" alt="Headshot of myself">
         </section>
         <section id="about">
             <h2>About Me</h2>
             <p>
-                Pastry wafer chocolate cake caramels. 
-                Gummi bears pudding sugar plum macaroon. 
-                Cake tart apple pie soufflé sweet sweet. 
-                Topping bear claw lemon drops gingerbread 
-                biscuit pudding fruitcake icing chocolate bar.
+                After leaving the golf industry in 2018, I embarked on a new career journey, 
+                earning my CompTIA A+ certification and transitioning into the IT field as a Technician in early 2019. 
+                My introduction to Python occurred that same year, culminating in my success in the Python Certified Entry-Level 
+                Programmer certification exam. Thriving in the IT realm, I consistently excelled and advanced 
+                within the companies I served.
+            </p>
+            <p>
+                In late August of 2022, my passion to learn more ignited, leading me to pursue online courses in offensive 
+                security (hacking). During this immersive learning experience, I further honed my Python skills while acquiring 
+                additional certifications from OffSec. I quickly began to find Python so useful and after passing the Network 
+                Penetration Testing Essentials, I made Python the focal point of my professional aspirations.
             </p>
             <div id="triangle1"></div>
             <div id="triangle2"></div>
@@ -22,9 +28,7 @@
             <i class="fas fa-laptop-code"></i>
             <h2>Skills</h2>
             <ul>
-            {% for project in projects %}
-            <li>{{ project.skills }}</li>
-            {% endfor %}
+              {{ combined_skills }}  
             </ul>
         </section>
         <section id="projects">
@@ -35,15 +39,14 @@
             <div id="project-list">
                 <div id="project1" class="a-project">
                     <h3>{{ project.title }}</h3>
-                    <a href="{{ project.link }}" class="github-btn">
+                    <a href="{{ project.url }}" class="github-btn">
                         <i class="fab fa-github"></i>
                         View on GitHub
                     </a>
                     <p>
                         {{ project.description }}
-                    </p>
                     <p>
-                        Skills: {{ project.skills }}
+                            Skills: {{ combined_skills }}
                     </p>
                 </div>
                 {% endfor %}
