Modified HTML on index to list skills

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         <section id="about-page">
             <div id="triangle7"></div>
             <div id="triangle8"></div>
-            <h2>Accomplished IT Technician, Programmer in the works. </h2>
+            <h2>Skilled Programmer with accomplished IT experience. </h2>
             <ul>
                 <li>
                     <p>Offensive Security Network Penetration Testing Essentials <a href="https://www.credential.net/a63a65db-c94a-46df-8977-d8bc79e1f18d">Security Network Penetration Testing Badge</a>.</p>
