--- a/templates/edit.html
+++ b/templates/edit.html
@@ -18,7 +18,7 @@
                 <label for="github">GitHub Link</label>
                 <input type="url" name="github" id="github" placeholder="Link to the repo" value="{{ project.url }}"required>
                 <div>
-                    <button type="reset">Cancel</button>
+                    <button onclick="window.history.back()">Cancel</button>
                     <button type="submit">Submit</button>
                 </div>
             </form>
