Fixed social links

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,17 +59,11 @@
                 <a href="https://twitter.com/MitchReddoch">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/mitchellreddoch/">
+                <a href="https://github.com/mitchredd77">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/mitchell-reddoch-69071515a/">
+                <a href="https://www.linkedin.com/in/mitchellreddoch/">
                     <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="https://github.com/mitchredd77/">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://www.ticktock.com">
-                    <i class="fab fa-tiktok"></i>
                 </a>
             </div>
             <div class="treehouse">
