Added Youtube to footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,8 +56,8 @@
             <div class="socials">
                 <!--Delete any you don't use-->
                 <!--Icons from FontAwesome.com/icons-->
-                <a href="https://twitter.com/MitchReddoch">
-                    <i class="fab fa-twitter"></i>
+                <a href="https://www.youtube.com/channel/UCdiV9suITy_wMyz35njfWQQ">
+                    <i class="fab fa-youtube"></i>
                 </a>
                 <a href="https://github.com/mitchredd77">
                     <i class="fab fa-github"></i>
