changed html for add/edit to be date object

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,7 +9,7 @@
                 <label for="title">Project Title</label>
                 <input type="text" name="title" id="title" placeholder="Project Name" value="{{ project.title }}"required>
                 <label for="date">Completion Date</label>
-                <input type="month" name="date" id="date" value="{{ project.date }}"required>
+                <input type="date" name="date" id="date" value="{{ project.date }}"required>
                 <label for="description">Description</label>
                 <textarea name="description" id="description" cols="30" rows="10" placeholder="Description" required>{{ project.description }}</textarea>
                 <p>Separate each skill by a comma</p>
